tests/error/comptime_error_reference_variable.bz
// error: unable to match expression of type 'const int32' to a non-const lvalue reference '&auto'
// error: failed to resolve variable declaration
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function main()
{
	(consteval {
		const i = 0;
		let &r = i;
		r = 3;
	});
}
